Pre-processing Luminosity and Phreatic level 28 and 12 weeks data

--- a/notebooks/pre-processing_data/Luminosity/28-weeks_January-12_August-03_2018/01-bgarcial-luminosity.ipynb
+++ b/notebooks/pre-processing_data/Luminosity/28-weeks_January-12_August-03_2018/01-bgarcial-luminosity.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
        "4  2018-01-12 02:17:28          1"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
        "False"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
        "array([1, 1, 1, ..., 1, 1, 1])"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
        "       [1]])"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +337,7 @@
        "max    55731.000000"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +440,7 @@
        "4          1"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +501,7 @@
        "       [1]])"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -695,13 +695,13 @@
      "output_type": "stream",
      "text": [
       "Remember our luminosity training data \n",
-      " [[    1]\n",
-      " [39330]\n",
-      " [27756]\n",
+      " [[27446]\n",
+      " [  338]\n",
+      " [ 2067]\n",
       " ...\n",
+      " [11419]\n",
       " [    1]\n",
-      " [15820]\n",
-      " [ 2503]]\n"
+      " [49804]]\n"
      ]
     }
    ],
@@ -724,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -768,16 +768,16 @@
     {
      "data": {
       "text/plain": [
-       "array([[0.        ],\n",
-       "       [0.70570608],\n",
-       "       [0.4980262 ],\n",
+       "array([[0.49246366],\n",
+       "       [0.00604701],\n",
+       "       [0.0370716 ],\n",
        "       ...,\n",
+       "       [0.20488067],\n",
        "       [0.        ],\n",
-       "       [0.28385071],\n",
-       "       [0.04489503]])"
+       "       [0.89364795]])"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -789,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -822,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -868,19 +868,19 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.492464</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.705706</td>\n",
+       "      <td>0.006047</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.498026</td>\n",
+       "      <td>0.037072</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.569962</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -892,14 +892,14 @@
       ],
       "text/plain": [
        "   Luz (lux)\n",
-       "0   0.000000\n",
-       "1   0.705706\n",
-       "2   0.498026\n",
-       "3   0.000000\n",
+       "0   0.492464\n",
+       "1   0.006047\n",
+       "2   0.037072\n",
+       "3   0.569962\n",
        "4   0.000000"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -911,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -940,7 +940,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2671</th>\n",
+       "      <th>5576</th>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -949,10 +949,10 @@
       ],
       "text/plain": [
        "      Luz (lux)\n",
-       "2671        1.0"
+       "5576        1.0"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -970,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -987,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -996,12 +996,12 @@
      "text": [
       "Remember our luminosity testing data \n",
       " [[    1]\n",
-      " [22417]\n",
       " [    1]\n",
+      " [11040]\n",
       " ...\n",
-      " [    1]\n",
-      " [    1]\n",
-      " [ 8242]]\n"
+      " [ 5198]\n",
+      " [  890]\n",
+      " [    1]]\n"
      ]
     }
    ],
@@ -1014,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1025,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1040,15 +1040,15 @@
      "data": {
       "text/plain": [
        "array([[0.        ],\n",
-       "       [0.42072862],\n",
        "       [0.        ],\n",
+       "       [0.20719233],\n",
        "       ...,\n",
-       "       [0.        ],\n",
-       "       [0.        ],\n",
-       "       [0.15467633]])"
+       "       [0.09754312],\n",
+       "       [0.01668575],\n",
+       "       [0.        ]])"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1060,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -1093,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1102,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -1143,19 +1143,19 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.420729</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.207192</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.754969</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.470805</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1164,13 +1164,13 @@
       "text/plain": [
        "   Luz (lux)\n",
        "0   0.000000\n",
-       "1   0.420729\n",
-       "2   0.000000\n",
-       "3   0.754969\n",
-       "4   0.000000"
+       "1   0.000000\n",
+       "2   0.207192\n",
+       "3   0.000000\n",
+       "4   0.470805"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1182,7 +1182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -1220,7 +1220,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1238,11 +1238,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
-    "luminosity_luxes_train_df.to_csv('../../../../data/processed/Luminosity/28-weeks_January-12_August-03_2018/' +'\\n' \n",
+    "luminosity_luxes_test_df.to_csv('../../../../data/processed/Luminosity/28-weeks_January-12_August-03_2018/' +'\\n' \n",
     "                                 'Luminosity_Normalized_TESTING_January-12_August-03.csv', sep=',', header=True, index=False)"
    ]
   },
