--- a/notebooks/pre-processing_data/Luminosity/Latest_12-weeks_May-4_August-03_2018/02-bgarcial-luminosity_l12w.ipynb
+++ b/notebooks/pre-processing_data/Luminosity/Latest_12-weeks_May-4_August-03_2018/02-bgarcial-luminosity_l12w.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
        "4  2018-05-04 02:07:38          1"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
        "False"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
        "array([1, 1, 1, ..., 1, 1, 1])"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
        "       [1]])"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +337,7 @@
        "max    53280.000000"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +439,7 @@
        "4          1"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +490,7 @@
        "       [1]])"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -601,13 +601,13 @@
      "output_type": "stream",
      "text": [
       "Remember our luminosity training data \n",
-      " [[    1]\n",
-      " [ 2930]\n",
-      " [14788]\n",
-      " ...\n",
-      " [  485]\n",
+      " [[24253]\n",
       " [    1]\n",
-      " [43032]]\n"
+      " [33602]\n",
+      " ...\n",
+      " [10204]\n",
+      " [    1]\n",
+      " [35947]]\n"
      ]
     }
    ],
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -644,16 +644,16 @@
     {
      "data": {
       "text/plain": [
-       "array([[0.        ],\n",
-       "       [0.05497476],\n",
-       "       [0.27753899],\n",
-       "       ...,\n",
-       "       [0.00908425],\n",
+       "array([[0.45518872],\n",
        "       [0.        ],\n",
-       "       [0.80765405]])"
+       "       [0.63066124],\n",
+       "       ...,\n",
+       "       [0.19150134],\n",
+       "       [0.        ],\n",
+       "       [0.67467482]])"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -714,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -751,23 +751,23 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.455189</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.054975</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.277539</td>\n",
+       "      <td>0.630661</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.100884</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.445072</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -775,14 +775,14 @@
       ],
       "text/plain": [
        "   Luz (lux)\n",
-       "0   0.000000\n",
-       "1   0.054975\n",
-       "2   0.277539\n",
-       "3   0.100884\n",
-       "4   0.445072"
+       "0   0.455189\n",
+       "1   0.000000\n",
+       "2   0.630661\n",
+       "3   0.000000\n",
+       "4   0.000000"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -832,7 +832,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -850,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -867,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -879,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -899,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -932,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -941,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -978,11 +978,11 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.807654</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.033142</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -990,7 +990,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.175041</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1002,14 +1002,14 @@
       ],
       "text/plain": [
        "   Luz (lux)\n",
-       "0   0.807654\n",
-       "1   0.000000\n",
+       "0   0.000000\n",
+       "1   0.033142\n",
        "2   0.000000\n",
-       "3   0.175041\n",
+       "3   0.000000\n",
        "4   0.000000"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1021,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -1059,7 +1059,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1077,13 +1077,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
     "luminosity_luxes_l12w_test_df.to_csv('../../../../data/processed/Luminosity/Latest_12-weeks_May-4_August-03_2018/' +'\\n' \n",
     "                                 'Luminosity_Normalized_TESTING_May-4_August-03.csv',  sep=',', header=True, index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
